# edi

./: .gitignore  CLAUDE.md  QWEN.md  main.py  pyproject.toml  req.txt
.qwen/: settings.json
.qwen/agents/: code-architect-librarian.md  edgecase-hunter.md
docs/: HLD.md  Instruction.md  LLD.md  PRD.md  VISION_PIPELINE_RESEARCH.md
docs/edi_decomposed/: index.md
docs/edi_decomposed/edi/: app.md  (+6 more)
example_code/Image_analysis/: adaptive_edit_validator.py  advanced_mask_generator.py  batch_analyzer.py  comparison_analyzer.py  main.py  quickstart_guide.md
example_code/VLM_based_image_analysis/: config.py  entity_extractor.py  entity_structurer.py  image_encoder.py  stable_entity_extraction.py  vlm_interface.py
example_code/dspy_toys/: dspy_code_generation.py  dspy_email_extractor.py  dspy_finance_analyst.py  dspy_image.py  dspy_llms_txt.py  dspy_text_RPG_game.py
mcp_servers/: MULTI_CLI_SETUP.md  README.md  SUMMARY.md  setup_claude_config.py  setup_gemini_config.py  setup_qwen_config.py  setup_universal.py  test_vision.py  vision_server.py
work/edi_vision_tui/: IP.json  OP.json  README.md  __main__.py  adaptive_mask_generator.py  analyze_masks.py  app.py  apply_masks.py  apply_specific_masks.py  change_detector.py  dspy_image.py  find_orange_roofs.py  find_orange_roofs_v2.py  image_paths.md  mask_generator.py  mock_edit.py  requirements.txt  runnable_app.py  statistical_test.py  system_test.py  yolo_test.py
work/edi_vision_v2/: README.md  WILDCARD_RESULTS.md  app.py  config.yaml  tui.py  tui.tcss
work/edi_vision_v3/: QWEN_FIRST_PROMPT.txt  README.md
(+139 files in other folders)
