[project]
name = "edi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.0",
    "fastapi>=0.119.1",
    "fastmcp>=2.12.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "open-clip-torch>=3.2.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "textual>=6.4.0",
    "textual-dev>=1.8.0",
    "tqdm>=4.66.5",
    "typing-extensions>=4.7.1",
    "ultralytics>=8.3.220",
]
